[package]
name = "tasmota-backup"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tasmota-mqtt-client = { version = "0.1", git = "https://github.com/icewind1991/tasmota-mqtt-client" }
md-5 = "0.10.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex_fmt = "0.3.0"
secretfile = "0.1.0"
